chore: ApiResponse sanitizeCauses 완전 불변 Map으로 원인을 래핑하도록 수정